--- a/config/data_config.yml
+++ b/config/data_config.yml
@@ -3,3 +3,7 @@ BASE_DIR: ./
 DATA_DIR: ./data/
 RAW_DATA_DIR: ./data/raw/
 PROCESSED_DATA_DIR: ./data/processed/
+
+IMG_HEIGHT: 64
+IMG_WIDTH: 64
+BATCH_SIZE: 32
