--- a/environment.yml
+++ b/environment.yml
@@ -4,33 +4,33 @@ channels:
   - nvidia
   - conda-forge
   - defaults
-dependencies:
-  # --- Core python ---
-  - python=3.10
-  - pip
-  - jupyterlab
-  - ipykernel
 
-  # 3. PYTORCH & CUDA (Cho GPU)
+dependencies:
+  - python=3.10
+  
+  # --- CV/DL Core (QUẢN LÝ BẰNG CONDA/PYTORCH CHANNEL) ---
   - pytorch=2.1.0
   - torchvision=0.16.0
   - torchaudio=2.1.0
-  - pytorch-cuda=12.1
-
-  # --- GIS and data science ---
-  - gdal=3.7.2
-  - rasterio=1.3.9
+  - pytorch-cuda=12.1          # Chỉ định bản build CUDA 12.1
+  
+  # --- CV/Scientific Core (CỐ ĐỊNH PHIÊN BẢN CHO ỔN ĐỊNH) ---
+  - opencv=4.10.0              # Lấy từ conda-forge. KHÔNG DÙNG opencv-python!
+  - numpy=1.26.4               # CRITICAL: Khóa NumPy 1.x để PyTorch chạy
+  - scipy=1.15.2
+  - scikit-learn=1.3.0         # Khóa bản sklearn an toàn
   - pandas
-  - scikit-learn
   - matplotlib
-  - pillow
+  - jupyterlab
+  - ipykernel
   - pyyaml
-  - numpy=1.26.4
-  - seaborn
-
-  # --- Pip packages ---
+  - packaging
+  - pillow
+  - networkx
+  - imageio
+  
+  # --- Pip Packages (Ít gây xung đột) ---
+  - pip
   - pip:
-    - opencv-python-headless==4.10.0.84
-    - albumentations==1.4.0 
-    - skillsnetwork
+    - albumentations==1.4.0    # Sẽ cài đúng bản này vì NumPy và OpenCV đã được cố định
     - tqdm
